--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -71,6 +71,11 @@ textarea::-webkit-scrollbar-thumb {
     margin-top: 3%;
 }
 
+.button:hover {
+    transform: scale(1.05);
+    transition: 0.5s;
+}
+
 input[type="submit"] {
     border-bottom: none;
 }
