--- a/css/style_about.css
+++ b/css/style_about.css
@@ -7,6 +7,10 @@ footer {
     margin-top: 10%;
 }
 
+h3 {
+    font-size: 2rem;
+}
+
 .row {
     margin-top: 40px;
     margin-bottom: 40px;
@@ -17,6 +21,7 @@ footer {
     background: #EEE9DA;
     margin-top: 2% !important;
     padding-top: 30px;
+    box-shadow: 3px 3px #DFD7BF;
 }
 
 .row .left_part img {
