--- a/css/style_about.css
+++ b/css/style_about.css
@@ -7,8 +7,9 @@ footer {
     margin-top: 10%;
 }
 
-h3 {
-    font-size: 2rem;
+.content h3 {
+    font-size: 1.2rem;
+    margin-left: 30px !important;
 }
 
 .row {
