--- a/css/style_home.css
+++ b/css/style_home.css
@@ -64,7 +64,7 @@ nav ul {
     color: white;
     padding: 12px 18px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 100;
     position: relative;
     border-radius: 50px;
@@ -84,7 +84,7 @@ nav ul {
 .banner {
     width: 100%;
     height: 130vh;
-    background-image: url('../Images/hero_image1.jpeg');
+    background-image: url('../Images/hero_image.jpg');
     background-size: cover;
     background-position: center 100%;
 }
