--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -22,7 +22,8 @@ form {
     margin: 17vh auto 0 auto;
     padding: 30px;
     box-sizing: border-box;
-    box-shadow: 2px 2px lightgrey;
+    box-shadow: 0 0 20px 0;
+    ;
 }
 
 h1 {
