--- a/css/style_about.css
+++ b/css/style_about.css
@@ -9,6 +9,7 @@ footer {
 
 .content h3 {
     font-size: 1.2rem;
+    padding-bottom: 5px;
 }
 
 .row {
@@ -35,11 +36,6 @@ footer {
 .btnPhoto {
     width: 150px;
 }
-
-
-
-
-
 
 
 /*---------------------------MEDIA QUERY FOR MOBILE----------------------------------------*/
