--- a/css/style_home.css
+++ b/css/style_home.css
@@ -20,7 +20,6 @@
     display: none;
 }
 
-
 /*-----------FOR NAVIGATION---------*/
 .navbar {
     background-color: transparent;
@@ -101,7 +100,7 @@ nav ul {
 }
 
 .banner .banner_text .subTxt h3 {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     color: #2B2B2B;
     text-shadow: 1px 1px #FDF7E4;
     font-family: Arial, Helvetica, sans-serif;
@@ -158,7 +157,7 @@ nav ul {
     gap: 30px 30px;
     padding-bottom: 7%;
     margin-left: 6%;
-    margin-top: 10%;
+    margin-top: 7%;
 }
 
 .row .left_part {
@@ -167,7 +166,7 @@ nav ul {
 
 .row .left_part img {
     width: 300px;
-    height: 400px;
+    height: 350px;
     object-fit: cover;
 }
 
@@ -231,9 +230,9 @@ h2 {
     align-items: center;
     justify-content: center;
     margin-top: 5%;
-    background-color: #F4E0B9;
+    background-color: #FAEED1;
     padding: 50px;
-    box-shadow: 0 0 3px 0;
+    box-shadow: 3px 3px #F2F1EB;
 }
 
 .gallery {
@@ -276,6 +275,19 @@ h2 {
     cursor: pointer;
     margin: 30px;
     color: #2B2B2B;
+}
+
+.link_to_blog_page {
+    color: #3C2A21;
+    font-size: 16px;
+    padding-top: 20px;
+    float: right;
+    margin-right: 10%;
+    font-weight: bold;
+}
+
+.link_to_blog_page:hover {
+    color: #E1AA74;
 }
 
 /*------------------------------FOOTER------------------------------*/
@@ -453,33 +465,29 @@ footer ul li a {
     }
 
     .banner .banner_text {
-        margin-left: 11.5%;
+        margin-left: 12.5%;
+        margin-top: 10%;
         top: 33%;
+        background-color: rgb(229, 220, 195, 0.4);
     }
 
-
     .banner .banner_text h1 {
-        font-size: 36px;
+        font-size: 35px;
         text-align: center;
         text-shadow: none;
         padding-right: 30px;
         padding-top: 30px;
-        text-shadow: 1.5px 1.5px black;
-    }
-
-    .banner .banner_text .subTxt {
-        width: 100%;
+        color: #3C2A21;
     }
 
     .banner .banner_text .subTxt h3 {
-        font-size: 16px;
-        color: #2B2B2B;
+        font-size: 15px;
         text-align: center;
         margin-top: 3%;
         margin-right: 9%;
         padding: 15px;
-        background-color: rgb(229, 220, 195, 0.6);
-        border-radius: 3px;
+        text-shadow: none;
+        background-color: rgb(229, 220, 195, 0.5);
     }
 
     .banner .button_container {
@@ -493,7 +501,7 @@ footer ul li a {
         width: 145px;
         padding: 10px 20px;
         margin-left: 12%;
-        margin-top: 3%;
+        margin-top: 6%;
     }
 
     /*--------SECTION 2 STYLE-----------*/
@@ -585,7 +593,7 @@ footer ul li a {
     /*-----------SECTION 3------FOR SLIDER--------------*/
     .heading_slider {
         font-size: 1.2rem;
-        margin-top: 10%;
+        margin-top: 13%;
     }
 
     .gallery .image_holder {
@@ -617,9 +625,14 @@ footer ul li a {
     .gallery_wrap {
         padding-left: 13px;
         padding-right: 10px;
+        margin-top: 14%;
     }
 
     .gallery_wrap a {
         text-decoration: none;
+    }
+
+    .link_to_blog_page {
+        font-size: 13px;
     }
 }
